@@ -199,7 +199,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Duser.timezone=UTC</argLine>
+                    <argLine>-Duser.timezone=UTC --enable-preview</argLine>
+
                 </configuration>
             </plugin>
             <plugin>
